Fix shaderc #version error, add ZGC to MD, and fix config save issue